# Linux_terminal

./: CMakeLists.txt  LICENSE  README.md  display_data.txt  main.cpp  term.h  terminal-main.cpp  textbuffer.cpp  textbuffer.h
inc/: LineBuffer.hpp  Reader.hpp  Selection.hpp  SelectionProvider.hpp  Shell.h  Shell.hpp  Snake.hpp  SnakeBlocks.hpp  StreamReader.hpp  Style.hpp  TextRenderer.hpp
src/: LineBuffer.cpp  Selection.cpp  SelectionProvider.cpp  Shell.cpp  Snake.cpp  SnakeBlocks.cpp  StreamReader.cpp  TextRenderer.cpp
